fix two 508 contrast errors

--- a/layout/css/custom.css
+++ b/layout/css/custom.css
@@ -149,7 +149,7 @@ h3{
   font-size:0.9em;
   font-style: italic;
   text-align: center;
-  color: rgb(137,137,137);
+  color: rgb(106,106,106);
   line-height:1.5em;
   margin-top:20px;
   text-decoration:none;
